--- a/composer.json
+++ b/composer.json
@@ -29,8 +29,13 @@
         "drupal-composer/preserve-paths": "^0.1",
         "drupal/admin_menu": "^3.0",
         "drupal/admin_views": "^1.7",
+        "drupal/always_visible": "1.x-dev",
+        "drupal/auto_nodetitle": "^1.0",
+        "drupal/backup_migrate": "^3.6",
         "drupal/bootstrap": "^3.26",
+        "drupal/brilliant_gallery": "^1.11",
         "drupal/business_responsive_theme": "^2.3",
+        "drupal/calendar": "^3.5",
         "drupal/composer_autoloader": "^1.0",
         "drupal/drupal": "^7.62",
         "drupal/nitobe": "^2.0",
