--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,16 @@
         "drupal/brilliant_gallery": "^1.11",
         "drupal/business_responsive_theme": "^2.3",
         "drupal/calendar": "^3.5",
+        "drupal/captcha": "^1.6",
         "drupal/composer_autoloader": "^1.0",
+        "drupal/computed_field": "^1.1",
+        "drupal/contact_permissions": "^1.0",
+        "drupal/content_access": "^1.2",
+        "drupal/context": "^3.10",
+        "drupal/cors": "^1.3",
+        "drupal/disable_messages": "^1.2",
         "drupal/drupal": "^7.62",
+        "drupal/editablefields": "^1.0",
         "drupal/nitobe": "^2.0",
         "drupal/professional_theme": "^2.5",
         "drush/drush": "^8.0",
