drupal/entityreference (1.5.0) drupal/entityreference_current (1.0.0-alpha2)drupal/job_scheduler (2.0.0) drupal/feeds (2.0.0-beta4)drupal/entityreference_feeds (1.0.0-beta3)drupal/exclude_node_title (1.9.0)drupal/entityreference_view_widget (2.1.0)drupal/entityreference_prepopulate_token (1.0.0)drupal/entityreference_prepopulate (1.7.0)drupal/exclude_node_title (1.9.0)

--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,13 @@
         "drupal/disable_messages": "^1.2",
         "drupal/drupal": "^7.62",
         "drupal/editablefields": "^1.0",
+        "drupal/entityreference": "^1.5",
+        "drupal/entityreference_current": "^1.0",
+        "drupal/entityreference_feeds": "^1.0",
+        "drupal/entityreference_prepopulate": "^1.7",
+        "drupal/entityreference_prepopulate_token": "^1.0",
+        "drupal/entityreference_view_widget": "^2.1",
+        "drupal/exclude_node_title": "^1.9",
         "drupal/nitobe": "^2.0",
         "drupal/professional_theme": "^2.5",
         "drush/drush": "^8.0",
