--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,16 @@
         "drupal/entityreference_prepopulate_token": "^1.0",
         "drupal/entityreference_view_widget": "^2.1",
         "drupal/exclude_node_title": "^1.9",
+        "drupal/features": "^2.11",
+        "drupal/feeds_tamper": "^1.2",
+        "drupal/feeds_tamper_string2id": "^1.1",
+        "drupal/feeds_xpathparser": "^1.1",
+        "drupal/field_collection": "^1.1",
+        "drupal/field_collection_table": "^1.0",
+        "drupal/filefield_sources": "^1.11",
+        "drupal/flexible_blogs": "^1.0",
+        "drupal/followbutton": "1.x-dev",
+        "drupal/google_analytics": "^2.6",
         "drupal/nitobe": "^2.0",
         "drupal/professional_theme": "^2.5",
         "drush/drush": "^8.0",
