adds contrib modules I-L via composer

--- a/composer.json
+++ b/composer.json
@@ -64,6 +64,18 @@
         "drupal/flexible_blogs": "^1.0",
         "drupal/followbutton": "1.x-dev",
         "drupal/google_analytics": "^2.6",
+        "drupal/image_importer": "^1.0",
+        "drupal/imagecache_actions": "^1.11",
+        "drupal/imce": "^1.11",
+        "drupal/imce_wysiwyg": "^1.0",
+        "drupal/import_html": "^1.0",
+        "drupal/inline_entity_display": "^1.0",
+        "drupal/jcarousel": "^2.7",
+        "drupal/jquery_update": "^2.7",
+        "drupal/libraries": "^2.5",
+        "drupal/lightbox2": "^2.12",
+        "drupal/link": "^1.7",
+        "drupal/logintoboggan": "^1.5",
         "drupal/nitobe": "^2.0",
         "drupal/professional_theme": "^2.5",
         "drush/drush": "^8.0",
