--- a/composer.json
+++ b/composer.json
@@ -76,8 +76,32 @@
         "drupal/lightbox2": "^2.12",
         "drupal/link": "^1.7",
         "drupal/logintoboggan": "^1.5",
+        "drupal/menu_attributes": "^1.0",
+        "drupal/menu_target": "^1.7",
+        "drupal/metatag": "^1.26",
+        "drupal/module_filter": "^2.2",
+        "drupal/multicolumn": "^1.0",
         "drupal/nitobe": "^2.0",
+        "drupal/nivo_slider": "^1.12",
+        "drupal/node_export": "^3.1",
+        "drupal/notify": "^1.7",
         "drupal/professional_theme": "^2.5",
+        "drupal/r4032login": "^1.8",
+        "drupal/redirect": "^1.0",
+        "drupal/rules": "^2.12",
+        "drupal/scanner": "^1.1",
+        "drupal/securepages": "^1.0",
+        "drupal/sharebar": "^1.1",
+        "drupal/simple_gmap": "^1.4",
+        "drupal/skinr": "^2.0",
+        "drupal/superfish": "^2.0",
+        "drupal/taxonomy_menu": "^1.6",
+        "drupal/ubercart": "^3.13",
+        "drupal/uc_varprice": "^1.0",
+        "drupal/uuid": "^1.3",
+        "drupal/views_calc": "^1.1",
+        "drupal/webform": "^4.21",
+        "drupal/wysiwyg": "^2.6",
         "drush/drush": "^8.0",
         "symfony/filesystem": "~2.7|^3",
         "webflo/drupal-finder": "^1.0.0"
