--- a/composer.json
+++ b/composer.json
@@ -27,23 +27,30 @@
         "composer/semver": "^1.4",
         "cweagans/composer-patches": "^1.6.5",
         "drupal-composer/preserve-paths": "^0.1",
+        "drupal/acquia_prosper": "1.x-dev",
+        "drupal/adaptivetheme": "^3.4",
         "drupal/admin_menu": "^3.0",
         "drupal/admin_views": "^1.7",
+        "drupal/adminimal_theme": "^1.26",
+        "drupal/admire_grunge": "^1.3",
         "drupal/always_visible": "1.x-dev",
         "drupal/auto_nodetitle": "^1.0",
         "drupal/backup_migrate": "^3.6",
         "drupal/bootstrap": "^3.26",
         "drupal/bootstrap_agency": "^1.1",
+        "drupal/bootstrap_barrio": "^3.10",
         "drupal/brilliant_gallery": "^1.11",
         "drupal/business_responsive_theme": "^2.3",
         "drupal/calendar": "^3.5",
         "drupal/captcha": "^1.6",
+        "drupal/clean_theme": "^1.4",
         "drupal/composer_autoloader": "^1.0",
         "drupal/computed_field": "^1.1",
         "drupal/contact_permissions": "^1.0",
         "drupal/content_access": "^1.2",
         "drupal/context": "^3.10",
         "drupal/cors": "^1.3",
+        "drupal/deco": "1.x-dev",
         "drupal/disable_messages": "^1.2",
         "drupal/drupal": "^7.62",
         "drupal/editablefields": "^1.0",
@@ -63,6 +70,7 @@
         "drupal/filefield_sources": "^1.11",
         "drupal/flexible_blogs": "^1.0",
         "drupal/followbutton": "1.x-dev",
+        "drupal/fusion": "^2.2",
         "drupal/google_analytics": "^2.6",
         "drupal/image_importer": "^1.0",
         "drupal/imagecache_actions": "^1.11",
@@ -76,18 +84,23 @@
         "drupal/lightbox2": "^2.12",
         "drupal/link": "^1.7",
         "drupal/logintoboggan": "^1.5",
+        "drupal/md_foto": "^1.0",
         "drupal/menu_attributes": "^1.0",
         "drupal/menu_target": "^1.7",
         "drupal/metatag": "^1.26",
         "drupal/module_filter": "^2.2",
+        "drupal/moleskine": "1.x-dev",
         "drupal/multicolumn": "^1.0",
         "drupal/nitobe": "^2.0",
         "drupal/nivo_slider": "^1.12",
         "drupal/node_export": "^3.1",
         "drupal/notify": "^1.7",
+        "drupal/photo": "^1.2",
+        "drupal/pixture_reloaded": "^3.1",
         "drupal/professional_theme": "^2.5",
         "drupal/r4032login": "^1.8",
         "drupal/redirect": "^1.0",
+        "drupal/rootcandy": "^1.0",
         "drupal/rules": "^2.12",
         "drupal/scanner": "^1.1",
         "drupal/securepages": "^1.0",
@@ -102,6 +115,7 @@
         "drupal/views_calc": "^1.1",
         "drupal/webform": "^4.21",
         "drupal/wysiwyg": "^2.6",
+        "drupal/zen": "^6.4",
         "drush/drush": "^8.0",
         "symfony/filesystem": "~2.7|^3",
         "webflo/drupal-finder": "^1.0.0"
